app/styles/component/_article-featured-video.scss
.article-featured-video {
	position: relative;
	padding-bottom: 56.25%;

	&.player-ready {
		.video-play-circle {
			opacity: 1;
		}

		.video-details {
			visibility: visible;
		}
	}

	&.is-played {
		.video-details {
			flex: 1 0 70%;
			visibility: hidden;
		}

		.ooyala-article-video {
			visibility: visible;
		}
	}

	&.fixed {
		.video-container {
			@keyframes video-slide {
				0% {
					transform: translateY(-100%);
				}
				100% {
					transform: translateY(0%);
				}
			}

			align-items: center;
			animation: video-slide .5s forwards;
			background: $wds-color-white;
			bottom: auto;
			box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
			display: flex;
			padding: 12px;
			position: fixed;
			transform: translateY(-100%);
			top: $wds-global-navigation-height;
			width: 100%;
			z-index: $z-site-head - 1;

			.video-placeholder {
				background-image: none;
				display: block;
				padding: 0;
				position: static;
			}

			.video-thumbnail {
				flex: 0 0 100px;
				height: 56px;
				position: static;
				width: 100px;
			}

			.video-details {
				flex-basis: 100%;
				padding-left: 12px;

				.video-label {
					color: $wds-color-light-c5;
					font-size: $wds-typescale-size-minus-3;
					opacity: 1;
				}

				.video-title {
					color: $wds-color-dark-blue-gray;
					font-size: $wds-typescale-size-minus-1;
					line-height: $wds-typescale-size-base;
				}
			}

			.video-close-button {
				display: block;
				position: absolute;
				top: 6px;
				right: 6px;

				.wds-icon {
					width: 14px;
					height: 14px;
					fill: $wds-color-light-c5;
				}
			}

			.video-play-circle {
				bottom: 18px;
				box-shadow: none;
				border-width: 3px;
				height: 30px;
				left: 64px;
				position: absolute;
				right: auto;
				width: 30px;

				.wds-icon-tiny {
					margin-left: 2px;
				}
			}

			&.is-played {
				.video-details {
					visibility: visible;
				}

				.ooyala-article-video {
					display: none;
				}
			}
		}
	}

	.video-container {
		bottom: 0;
		position: absolute;
		top: 0;
		width: 100%;
	}

	.wds-spinner {
		$spinner-size: 59px;

		left: 50%;
		margin-left: -($spinner-size/2);
		margin-top: -($spinner-size/2);
		opacity: .7;
		position: absolute;
		top: 50%;

		.wds-spinner__stroke {
			stroke: $wds-color-white;
		}
	}

	.ooyala-article-video {
		height: 100%;
		left: 0;
		position: absolute;
		top: 0;
		width: 100%;
	}

	.video-thumbnail {
		width: 100%;
	}

	.video-placeholder {
		-webkit-font-smoothing: antialiased;
		align-items: flex-end;
		background-image: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, transparent 100%);
		bottom: 0;
		color: $wds-color-white;
		display: flex;
		font-weight: bold;
		justify-content: space-between;
		left: 0;
		padding: 12px;
		position: absolute;
		resize: none;
		right: 0;
	}

	.video-play-circle {
		align-items: center;
		background-color: $wds-color-light-blue;
		border: 6px solid rgba(0, 0, 0, 0.32);
		border-radius: 50%;
		display: flex;
		height: 80px;
		justify-content: center;
		margin-left: 12px;
		opacity: .7;
		width: 80px;

		.wds-icon-small {
			@include square(30px);
			margin-left: 4px;
		}
	}

	.video-close-button {
		display: none;
	}

	.video-details {
		flex: 1 0 70%;
		visibility: hidden;

		.video-label {
			color: $wds-color-white;
			font-size: $wds-typescale-size-minus-1;
			line-height: 1.25em;
			opacity: 0.5;
			text-transform: uppercase;
		}

		.video-time:before {
			content: '\2022';
			padding: 0 2px;
		}

		.video-title {
			font-size: $wds-typescale-size-base;
			line-height: 1.25em;
		}
	}

	.ooyala-article-video {
		visibility: hidden;
	}

	// for oo-xsmall breakpoint
	@media screen and (max-width: 559px) {
		.video-container {
			.video-play-circle {
				height: 60px;
				width: 60px;

				.wds-icon-small {
					@include square($wds-icon-small-size);
				}
			}

			.video-details {
				bottom: 18px;

				.video-label {
					font-size: $wds-typescale-size-minus-2;
				}

				.video-title {
					font-size: $wds-typescale-size-base;
				}
			}
		}
	}
}

